--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -25,6 +25,20 @@
       .manual-remove-top-padding .scroll{
         padding-top:0px !important;
       }
+
+      .list .item.item-accordion {
+        line-height: 20px;
+        padding-top: 0;
+        padding-bottom: 0;
+        transition: 0.09s all linear;
+      }
+      .list .item.item-accordion.ng-hide {
+        line-height: 0px;
+      }
+      .list .item.item-accordion.ng-hide-add,
+      .list .item.item-accordion.ng-hide-remove {
+        display: block !important;
+      }
     </style>
 
     <script src="js/app.js"></script>
